Added deadline and auto-expire feature

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="todo-input-area">
     <input type="text" class="js-todo-text" placeholder="Task name" />
-    <input type="date" class="js-todo-date" />
+    <input type="datetime-local" class="js-todo-date" />
     <button class="js-add-button">Add</button>
   </div>
 
